# soulseed-front

./: .env.example  .gitignore  Cargo.toml  Dioxus.toml  package-lock.json  package.json  rust-toolchain.toml  tailwind.config.js
apps/console/: Cargo.toml
apps/console/src/: config.rs  main.rs  models.rs  state.rs
apps/console/src/api/: mod.rs
apps/console/src/fixtures/: timeline.rs
apps/console/src/hooks/: ace.rs  autonomous.rs  context.rs  cycle_runner.rs  dfr.rs  evolution.rs  graph.rs  live.rs  metacognition.rs  mod.rs  surreal.rs  timeline.rs  version_chain.rs  workspace.rs
apps/console/src/services/: dialogue.rs  sse.rs
apps/console/src/ui/: ace.rs  autonomous.rs  context.rs  dfr.rs  evolution.rs  explain.rs  graph.rs  graph_enhanced.rs  interaction.rs  metacognition.rs  mod.rs  notifications.rs  surreal.rs  timeline.rs  tools.rs  version_chain.rs  workspace.rs
apps/console/src_backup/: config.rs  main.rs  models.rs  state.rs
apps/console/src_backup/api/: mod.rs
apps/console/src_backup/fixtures/: graph.rs  mod.rs  timeline.rs  workspace.rs
apps/console/src_backup/hooks/: ace.rs  context.rs  cycle_runner.rs  graph.rs  live.rs  mod.rs  timeline.rs  workspace.rs
apps/console/src_backup/services/: mod.rs  sse.rs
apps/console/src_backup/ui/: ace.rs  explain.rs  graph.rs  interaction.rs  notifications.rs  timeline.rs  tools.rs  workspace.rs
public/: index.html  tailwind.css
scripts/: start_console.sh
