[workspace]
resolver = "2"
members = [
    "apps/console"
]

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["Soulseed Team <team@soulseed.io>"]
license = "MIT"

[workspace.dependencies]
dotenvy = { version = "0.15", default-features = false }
dioxus = { version = "0.6", features = ["web"] }
dioxus-web = "0.6"
dioxus-router = "0.6"
dioxus-signals = "0.6"
dioxus-logger = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.8", features = ["macros"] }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
gloo-storage = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
console_error_panic_hook = "0.1"
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
tracing = "0.1"
once_cell = "1.19"
soulseed-agi-core-models = { path = "../soulseed/soulseed-agi-core-models" }
web-sys = { version = "0.3", features = ["Window", "Navigator", "Clipboard"] }
uuid = { version = "1.8", features = ["v4", "js"] }
time = "0.3"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
